--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{acharya2026surveyception,
   title={Surveyception: An Exploration of Deceptive Survey Forms (Under Review)},
-  author={Acharya, Bhupendra and Danish, Muhammad and Pape, David and Saad, Muhammad and Anwar, Afsah and Schönherr, Lea and Holz, Thorsten},
+  author={Acharya, Bhupendra and \textbf{Danish, Muhammad} and Pape, David and Saad, Muhammad and Anwar, Afsah and Schönherr, Lea and Holz, Thorsten},
   booktitle={USENIX},
   pages={},
   year={2026}
@@ -11,7 +11,7 @@
 
 @inproceedings{danish2026,
   title={Private Links, Public Leaks: A Large Scale Measurement and Analysis of PII Leakage through SMS-Delivered URLs (Under Review)},
-  author={Danish, Muhammad and Sobrados, Enrique and Saha, Dheeman and Acharya, Bhupendra and Rahaman, Sazzadur and Abdullah, Mueen and Anwar, Afsah},
+  author={\textbf{Danish, Muhammad} and Sobrados, Enrique and Saha, Dheeman and Acharya, Bhupendra and Rahaman, Sazzadur and Abdullah, Mueen and Anwar, Afsah},
   booktitle={Proceedings of the ACM on Web Conference 2026},
   pages={},
   year={2026}
